# CalTech-CTME-AramCo-2025

./: .env.template  .gitignore  README.md  axolotl_qwen3_0.6b.yaml  getting_started_with_LLMs_solution.ipynb  pyproject.toml
01_our_first_chatbot/: chat.py  prompts.py
01_our_first_chatbot_solution/: __main__.py  chat.py  constants.py
02_dataset_generation/: __main__.py  companies.py  constants.py  create_data.py  database_executor.py  db_graph.py  db_schemas.py  generate_questions.py  main_graph.py  models.py  prompts.py  schema_to_sqlalchemy.py
ctme/: utils.py
ctme/basics/: __init__.py  plot_temperature.py  plot_top_p.py
notebooks/: 01_getting_started_with_LLMs.ipynb  02_fine_tune_lora.ipynb  03_serve_adapter.ipynb  axolotl.yaml  chatml_evaluation_data.jsonl  chatml_training_data.jsonl  db_creation.ipynb  distilabel_dev.ipynb  output_sqlalchemy_schema.py  populate_data.py
