[project]
name = "ctme"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "argilla>=2.8.0",
    "attachments>=0.3.0",
    "datasets>=3.6.0",
    "faker>=37.3.0",
    "gradio[mcp]>=5.29.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain-community>=0.3.25",
    "langchain-openai>=0.3.22",
    "langchain[gemini]>=0.3.25",
    "langgraph>=0.4.8",
    "litellm>=1.70.0",
    "matplotlib>=3.10.3",
    "names>=0.3.0",
    "numpydoc>=1.8.0",
    "pandas>=2.2.3",
    "python-box>=7.3.2",
    "python-dotenv>=1.1.0",
    "seaborn>=0.13.2",
    "sqlalchemy>=2.0.41",
    "structlog>=25.4.0",
    "tabulate>=0.9.0",
    "tenacity>=9.1.2",
    "thefuzz>=0.22.1",
    "yfinance>=0.2.61",
]
authors = [
    { name = "Michael Frantz", email = "michaelgfrantz@gmail.com" },
]

[tool.setuptools.packages.find]
include = ["ctme"]
